# notion-finance-sync

./: .env.example  .gitignore  README.md  config.example.toml  flake.nix  justfile  pyproject.toml
deploy/: com.alexmiller.notion-finance-sync.plist  run_sync.sh
docs/: DEPLOY.md  SCRAPER_AGENT_BRIEF.md  SPEC.md
nix/: darwin.nix
scripts/: add_wf_card_option.py  backfill.py  demo_fake_bank.py  dry_run_bofa_backfill.py  enrich_wf_bilt_points.py  gen_property_ids.py  make-signing-cert.sh  migrate_schema.py  recon_bofa.py  recon_checking_detail.py  recon_fidelity.py  recon_merrill_ira.py  recon_venmo.py  rekey_dedupe_cards.py  set_notion_property_descriptions.py  store_op_token.sh  sync.py  validate_bofa_login.py  venmo_web_capture.py
src/notion_finance_sync/backfill/: runner.py
tests/: fakes.py  test_backfill_runner.py  test_bilt_parser.py  test_bilt_portal.py  test_bofa_assemble.py  test_bofa_card.py  test_bofa_categories.py  test_bofa_deposit.py  test_bofa_historical.py  test_bofa_investments.py  test_bofa_pipeline_e2e.py  test_bofa_rewards.py  test_bofa_scraper_accounts.py  test_diffing.py  test_encoders.py  test_etrade_activity.py  test_everbank_parser.py  test_fidelity_activity.py  test_migrate_schema.py  test_notion_task.py  test_orchestrator.py  test_orphan.py  test_reconcile.py  test_review_status.py  test_server.py  test_settings.py  test_sync_cli.py  test_tracker.py  test_twofa_email.py  test_twofa_sms.py  test_us_bank_parser.py  test_venmo_parser.py  test_wells_fargo_activity.py  test_wells_fargo_scraper.py  test_wells_fargo_statements.py
(+78 files in other folders)
