[project]
name = "notion-finance-sync"
version = "0.1.0"
description = "Personal direct-bank-scraper service writing transactions and investment events to Notion. Replaces aggregator-based notion-ai-budgeting-app."
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13.2",
    "pydantic-settings>=2.13.1",
    "pyyaml>=6.0.3",
    "structlog>=25.5.0",
    "fastapi>=0.118.0",
    "uvicorn[standard]>=0.34.0",
    "seleniumbase>=4.32.0",
    "google-api-python-client>=2.150.0",
    "google-auth>=2.36.0",
    "google-auth-oauthlib>=1.2.1",
    "pdfplumber>=0.11.4",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "respx>=0.23.1",
    "ruff>=0.15.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.uv]
package = false
